Source/WebGPU/WGSL/tests/invalid/reordering-cycle-self-const.wgsl
// RUN: %not %wgslc | %check

// CHECK-L: encountered a dependency cycle: a -> a
const a = a * 2;
